Fixed: Increase width and truncate long names on Import List Exclusions
(cherry picked from commit 2d0541c03b761a0ec5e10711d6bd577e07141517)

Closes #2506

--- a/frontend/src/Settings/ImportLists/ImportListExclusions/ImportListExclusion.css
+++ b/frontend/src/Settings/ImportLists/ImportListExclusions/ImportListExclusion.css
@@ -8,11 +8,13 @@
 }
 
 .artistName {
-  flex: 0 0 300px;
+  @add-mixin truncate;
+
+  flex: 0 1 600px;
 }
 
 .foreignId {
-  flex: 0 0 400px;
+  flex: 0 0 290px;
 }
 
 .actions {
